tried to fix fonts not showing up on mobile?

--- a/src/components/styles/page.module.css
+++ b/src/components/styles/page.module.css
@@ -15,7 +15,7 @@
     line-height: 1.5;
     padding: 1.25rem;
     border-radius: 1.875rem;
-    filter: drop-shadow(0.3125rem 0.3125rem 0 rgba(0, 0, 0, 0.2));
+    filter: drop-shadow(0.3125rem 0.3125rem 0 rgba(0, 0, 0, 0.3));
     transition: 0.3s ease;
 }
 
